# youtube-trending-videos-scrapper

./: .replit  README.md  pyproject.toml  replit.nix  scrapper.py  scratch.py  trending.csv  trending.html
